MDEV-13024: Server crashes in my_store_ptr upon DELETE from sequence in multi-table format

Make operation possition() dummy for sequences (should not be used really)